Created the StudentDAO

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "defaultConnection2": "Data Source=.;Initial Catalog=StudentsDB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True",
+        "defaultConnection": "Server=.;Database=StudentsDB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
